[gd_scene load_steps=6 format=3 uid="uid://dg228i3wg5mxx"]

[ext_resource type="PackedScene" uid="uid://b2ndbkv4et6g1" path="res://ui/overlays/base_overlay/base_overlay.tscn" id="1_ejn7u"]
[ext_resource type="PackedScene" uid="uid://byocrfp5gbeii" path="res://ui/overlays/base_overlay/base_section/base_section.tscn" id="2_l5gir"]
[ext_resource type="Script" uid="uid://bq6oxq6xmyhj7" path="res://ui/overlays/shell_info_overlay/shell_info_overlay.gd" id="2_p56iy"]
[ext_resource type="PackedScene" uid="uid://coutl2tg4we02" path="res://ui/overlays/shell_info_overlay/penetration_simulator/penetration_simulator.tscn" id="3_lktvo"]
[ext_resource type="Resource" uid="uid://do4hmh2rl7t7y" path="res://entities/tank/tanks/m4a1_sherman/shells/m75.tres" id="3_pv4d1"]

[node name="ShellInfoOverlay" instance=ExtResource("1_ejn7u")]
script = ExtResource("2_p56iy")
default_shell_spec = ExtResource("3_pv4d1")

[node name="PanelContainer" parent="." index="1"]
offset_left = -254.0
offset_top = -77.5
offset_right = 254.0
offset_bottom = 77.5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/SectionsContainer/RootSection" index="0"]
layout_mode = 2

[node name="BasicStatsContainer" type="PanelContainer" parent="PanelContainer/SectionsContainer/RootSection/VBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3

[node name="BasicStats" type="Label" parent="PanelContainer/SectionsContainer/RootSection/VBoxContainer/BasicStatsContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Shell: 
Damage: 
Penetration: 
Muzzle Velocity: "
uppercase = true

[node name="NavigationContainer" type="VBoxContainer" parent="PanelContainer/SectionsContainer/RootSection/VBoxContainer" index="1"]
layout_mode = 2

[node name="AdvancedInfoButton" type="Button" parent="PanelContainer/SectionsContainer/RootSection/VBoxContainer/NavigationContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
text = "ADVANCED INFO"

[node name="PenetrationSimulatorButton" type="Button" parent="PanelContainer/SectionsContainer/RootSection/VBoxContainer/NavigationContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "PENETRATION SIMULATOR"

[node name="AdvancedInfoSection" parent="PanelContainer/SectionsContainer" index="1" instance=ExtResource("2_l5gir")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
back_button_label = "BACK TO SHELL INFO"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/SectionsContainer/AdvancedInfoSection" index="0"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/SectionsContainer/AdvancedInfoSection/MarginContainer" index="0"]
layout_mode = 2

[node name="InfoLabelContainer" type="HBoxContainer" parent="PanelContainer/SectionsContainer/AdvancedInfoSection/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 6

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/SectionsContainer/AdvancedInfoSection/MarginContainer/VBoxContainer/InfoLabelContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShellStats" type="Label" parent="PanelContainer/SectionsContainer/AdvancedInfoSection/MarginContainer/VBoxContainer/InfoLabelContainer/PanelContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Shell Type: 
Caliber: 
Penetrator Caliber: 
Unlock Cost: 
Flags: "
uppercase = true

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/SectionsContainer/AdvancedInfoSection/MarginContainer/VBoxContainer/InfoLabelContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BaseShellStats" type="Label" parent="PanelContainer/SectionsContainer/AdvancedInfoSection/MarginContainer/VBoxContainer/InfoLabelContainer/PanelContainer2" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Ricochet Angle: 
Damage Range: 
Tracer: "
uppercase = true

[node name="PenetrationSimulatorSection" parent="PanelContainer/SectionsContainer" index="2" instance=ExtResource("2_l5gir")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
back_button_label = "BACK TO SHELL INFO"

[node name="PenetrationSimulator" parent="PanelContainer/SectionsContainer/PenetrationSimulatorSection" index="0" instance=ExtResource("3_lktvo")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
